[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quite-engine"
version = "0.1.0"
authors = [
  { name="BananaDevfr" },
]
description = "A lightweight Lua-based game engine"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pygame",
    "lupa",
]

[tool.setuptools]
packages = ["quite"]
